<?xml version="1.0"?>
<package format="2">
  <name>lidar_imu_calib_based_on_map</name>
  <version>0.0.0</version>
  <description>The lidar_imu_calib_based_on_map package</description>
  <maintainer email="609974291@qq.com">cuidarchan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
</package>
